--- a/project.properties
+++ b/project.properties
@@ -3,11 +3,11 @@
 
 #Asset paths
 # Use slash "/" as path separator. Example: Use "C:/SoftwareAG", instead of "C:\SoftwareAG".
-isPackages=./assets/IS/Packages
-isTests=./assets/IS/Tests
-isConfigDir=./assets/IS/config
+isPackages=.//assets/IS/packages/
+isTests=.//assets/IS/tests/
+isConfigDir=./assets/IS/config/
 bpmProjects=./assets/BPM/Process Model/
-mwsProjects=./assets/MWS/Task UI/
+mwsProjects=./assets/MWS/Task UI
 rulesProjects=./assets/Rules/
 #Should always be named UniversalMessaging
 umExport=./assets/UniversalMessaging
