--- a/project.properties
+++ b/project.properties
@@ -6,8 +6,8 @@
 isPackages=.//assets/IS/packages
 isTests=.//assets/IS/tests
 isConfigDir=./assets/IS/config
-bpmProjects=./assets/BPM/Process Model/
-mwsProjects=./assets/MWS/Task UI
+bpmProjects=.//assets/BPM/Process Model/
+mwsProjects=.//assets/MWS/Task UI
 rulesProjects=./assets/Rules/
 #Should always be named UniversalMessaging
 umExport=./assets/UniversalMessaging
