--- a/project.properties
+++ b/project.properties
@@ -5,7 +5,7 @@
 # Use slash "/" as path separator. Example: Use "C:/SoftwareAG", instead of "C:\SoftwareAG".
 isPackages=.//assets/IS/packages
 isTests=.//assets/IS/tests
-isConfigDir=./assets/IS/config
+isConfigDir=.//assets/IS/config
 bpmProjects=.//assets/BPM/Process Model/
 mwsProjects=.//assets/MWS/Task UI
 rulesProjects=./assets/Rules/
