--- a/project.properties
+++ b/project.properties
@@ -6,7 +6,7 @@
 isPackages=.//assets/IS/packages
 isTests=.//assets/IS/tests
 isConfigDir=.//assets/IS/config
-bpmProjects=.//assets/BPM/Process\ Model
+bpmProjects=.//assets/BPM/Process Model/
 mwsProjects=.//assets/MWS/Task UI
 rulesProjects=./assets/Rules/
 #Should always be named UniversalMessaging
