--- a/project.properties
+++ b/project.properties
@@ -4,7 +4,7 @@
 #Asset paths
 # Use slash "/" as path separator. Example: Use "C:/SoftwareAG", instead of "C:\SoftwareAG".
 isPackages=.//assets/IS/packages
-isTests=.//assets/IS/tests
+isTests=.//assets/IS/Tests
 isConfigDir=.//assets/IS/config
 bpmProjects=.//assets/BPM/Process Model
 mwsProjects=.//assets/MWS/Task UI
