--- a/project.properties
+++ b/project.properties
@@ -11,3 +11,4 @@ mwsProjects=.//assets/MWS/Task UI
 rulesProjects=./assets/Rules/
 #Should always be named UniversalMessaging
 umExport=./assets/UniversalMessaging
+projectName=Wm_O2C_CI_CD
