--- a/project.properties
+++ b/project.properties
@@ -12,3 +12,4 @@ rulesProjects=./assets/Rules/
 #Should always be named UniversalMessaging
 umExport=./assets/UniversalMessaging
 projectName=Wm_O2C_CI_CD
+repositoryName=https://github.com/vidb/WM_O2C.git
